--- a/OpenCVSoftware/.project
+++ b/OpenCVSoftware/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>OpenCVSoftware</name>
+	<name>BallPlateSoftware</name>
 	<comment></comment>
 	<projects>
 	</projects>
